course5/6.3/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: game2048
  name: game2048
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: game2048
